0.0.12 - date picker, fixes blurry canvas text with dpi, fixes overflow issue with card content

--- a/components/CanvasPlatformer.module.scss
+++ b/components/CanvasPlatformer.module.scss
@@ -11,6 +11,6 @@
 
   &:focus {
     outline: 0;
-    box-shadow: 0 0 0 1px var(--theme-focused-foreground);
+    box-shadow: inset 0 0 0 1px var(--theme-focused-foreground);
   }
 }
